--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rtube Video Sharing</title>
+    <title>Welcome to Video Sharing Platform Rtube</title>
+    <link rel="icon" type="image/x-icon" href="images/logo.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body!-->
@@ -15,7 +16,7 @@
         <div class="nav-left flex-div">
             <img src="images/menu.png" class="menu-icon">
             <img src="images/logo.png" class="logo">
-            <span class="name"><p>MuRaakib</p></span>
+            <span class="name"><p>webdrakib</p></span>
         </div>
         <div class="nav-middle flex-div">
             <div class="search-box">
