--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         
         <div class="subscribed-list">
             <h3>SUBSCRIBED</h3>
-            <a href=""><img src="images/rakib.jpg"><p>Laden Bhai</p></a>
+            <a href=""><img src="images/rakib.jpg"><p>Webdrakib</p></a>
             <a href=""><img src="images/logo.png"><p>RakibDevo</p></a>
             <a href=""><img src="images/tom.png"><p>Tom Bhai</p></a>
             <a href=""><img src="images/megan.png"><p>Megan Bhai</p></a>
@@ -74,7 +74,7 @@
                     <img src="images/rakib.jpg">
                     <div class="vid-info">
                         <a href="play-video.html">Best channel to learn coding that help you to be a web developer</a>
-                        <p>Mockend Sharing</p>
+                        <p>Rtube Sharing</p>
                         <p>25k Views &bull; 3 days</p>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
                     <img src="images/rakib.jpg">
                     <div class="vid-info">
                         <a href="play-video.html">Best channel to learn coding that help you to be a web developer</a>
-                        <p>Mockend Sharing</p>
+                        <p>Rtube Sharing</p>
                         <p>25k Views &bull; 3 days</p>
                     </div>
                 </div>
@@ -96,7 +96,7 @@
                     <img src="images/Jack.png">
                     <div class="vid-info">
                         <a href="">Best channel to learn coding that help you to be a web developer</a>
-                        <p>Mockend Sharing</p>
+                        <p>Rtube Sharing</p>
                         <p>25k Views &bull; 3 days</p>
                     </div>
                 </div>
@@ -107,7 +107,7 @@
                     <img src="images/Jack.png">
                     <div class="vid-info">
                         <a href="">Best channel to learn coding that help you to be a web developer</a>
-                        <p>Mockend Sharing</p>
+                        <p>Rtube Sharing</p>
                         <p>25k Views &bull; 3 days</p>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
                     <img src="images/Jack.png">
                     <div class="vid-info">
                         <a href="">Best channel to learn coding that help you to be a web developer</a>
-                        <p>Mockend Sharing</p>
+                        <p>Rtube Sharing</p>
                         <p>25k Views &bull; 3 days</p>
                     </div>
                 </div>
@@ -129,7 +129,7 @@
                     <img src="images/Jack.png">
                     <div class="vid-info">
                         <a href="">Best channel to learn coding that help you to be a web developer</a>
-                        <p>Mockend Sharing</p>
+                        <p>Rtube Sharing</p>
                         <p>25k Views &bull; 3 days</p>
                     </div>
                 </div>
@@ -140,7 +140,7 @@
                     <img src="images/Jack.png">
                     <div class="vid-info">
                         <a href="">Best channel to learn coding that help you to be a web developer</a>
-                        <p>Mockend Sharing</p>
+                        <p>Rtube Sharing</p>
                         <p>25k Views &bull; 3 days</p>
                     </div>
                 </div>
@@ -151,7 +151,7 @@
                     <img src="images/Jack.png">
                     <div class="vid-info">
                         <a href="">Best channel to learn coding that help you to be a web developer</a>
-                        <p>Mockend Sharing</p>
+                        <p>Rtube Sharing</p>
                         <p>25k Views &bull; 3 days</p>
                     </div>
                 </div>
@@ -162,7 +162,7 @@
                     <img src="images/Jack.png">
                     <div class="vid-info">
                         <a href="">Best channel to learn coding that help you to be a web developer</a>
-                        <p>Mockend Sharing</p>
+                        <p>Rtube Sharing</p>
                         <p>25k Views &bull; 3 days</p>
                     </div>
                 </div>
@@ -173,7 +173,7 @@
                     <img src="images/Jack.png">
                     <div class="vid-info">
                         <a href="">Best channel to learn coding that help you to be a web developer</a>
-                        <p>Mockend Sharing</p>
+                        <p>Rtube Sharing</p>
                         <p>25k Views &bull; 3 days</p>
                     </div>
                 </div>
@@ -184,7 +184,7 @@
                     <img src="images/Jack.png">
                     <div class="vid-info">
                         <a href="">Best channel to learn coding that help you to be a web developer</a>
-                        <p>Mockend Sharing</p>
+                        <p>Rtube Sharing</p>
                         <p>25k Views &bull; 3 days</p>
                     </div>
                 </div>
@@ -195,7 +195,7 @@
                     <img src="images/Jack.png">
                     <div class="vid-info">
                         <a href="">Best channel to learn coding that help you to be a web developer</a>
-                        <p>Mockend Sharing</p>
+                        <p>Rtube Sharing</p>
                         <p>25k Views &bull; 3 days</p>
                     </div>
                 </div>
@@ -206,7 +206,7 @@
                     <img src="images/Jack.png">
                     <div class="vid-info">
                         <a href="">Best channel to learn coding that help you to be a web developer</a>
-                        <p>Mockend Sharing</p>
+                        <p>Rtube Sharing</p>
                         <p>25k Views &bull; 3 days</p>
                     </div>
                 </div>
